--- a/scss/components/navbar.scss
+++ b/scss/components/navbar.scss
@@ -14,7 +14,7 @@ $navbar-background: $background !default;
     &.is-sticky {
         position: sticky;
         top: 0;
-        z-index: 10;
+        z-index: 4;
     }
 
     nav,
