--- a/scss/utilities/variables.scss
+++ b/scss/utilities/variables.scss
@@ -18,7 +18,7 @@ $mono6: #1a1a1a !default;
 $color: #172142 !default;
 $threshold-color: 60%;
 
-$shadow: 0 0.5rem 1rem rgba($black, 0.15) !default;
+$shadow: 0 0.4rem 1rem rgba($black, 0.1) !default;
 
 $border-color: $mono1 !default;
 $border-width: 1px !default;
